[gd_scene load_steps=11 format=3 uid="uid://6o6eiydhbvdn"]

[ext_resource type="Material" uid="uid://bqobf4jtv2a83" path="res://shaders/RedShader.tres" id="1_03yoi"]
[ext_resource type="Script" uid="uid://8ij4vk5yqwtt" path="res://scripts/player.gd" id="2_vgh7x"]
[ext_resource type="Texture2D" uid="uid://bctge3j1cttg3" path="res://assets/ship.png" id="3_dhg42"]
[ext_resource type="Script" uid="uid://c78lqfuowj4ou" path="res://scripts/states/State_machine.gd" id="4_y8w6n"]
[ext_resource type="Script" uid="uid://dbfkhxnw14hba" path="res://scripts/states/PlayerIdle.gd" id="5_q05er"]
[ext_resource type="Script" uid="uid://dtsmo3xvihwhe" path="res://scripts/states/PlayerWandering.gd" id="6_0jxdt"]
[ext_resource type="Texture2D" uid="uid://666hhlenjqfm" path="res://assets/flames1.png" id="7_0jxdt"]
[ext_resource type="Texture2D" uid="uid://d0c3i380oberb" path="res://assets/flames2.png" id="8_omqnq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fvctb"]
radius = 22.0
height = 116.0

[sub_resource type="SpriteFrames" id="SpriteFrames_wq5sj"]
animations = [{
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_0jxdt")
}, {
"duration": 1.0,
"texture": ExtResource("8_omqnq")
}],
"loop": true,
"name": &"wandering",
"speed": 5.0
}]

[node name="PlayerShip" type="Area2D"]
material = ExtResource("1_03yoi")
scale = Vector2(0.5, 0.5)
script = ExtResource("2_vgh7x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 0)
shape = SubResource("CapsuleShape2D_fvctb")

[node name="Sprite2D" type="Sprite2D" parent="."]
use_parent_material = true
rotation = -1.5708
texture = ExtResource("3_dhg42")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_y8w6n")
initial_state = "PlayerIdle"

[node name="PlayerIdle" type="Node" parent="StateMachine"]
script = ExtResource("5_q05er")
metadata/_custom_type_script = "uid://dbfkhxnw14hba"

[node name="PlayerWandering" type="Node" parent="StateMachine"]
script = ExtResource("6_0jxdt")
metadata/_custom_type_script = "uid://dtsmo3xvihwhe"

[node name="Animation_Flames" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 86)
scale = Vector2(1.88574, 1.88574)
sprite_frames = SubResource("SpriteFrames_wq5sj")
animation = &"idle"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_body_shape_exited"]
